--- a/compose-server-proxied.yml
+++ b/compose-server-proxied.yml
@@ -19,10 +19,7 @@ services:
       - ./server-configs/proxied/pre-cert.conf:/etc/nginx/conf.d/config.conf
       - ./server-configs/certbot/conf:/etc/letsencrypt
       - ./server-configs/certbot/www:/var/www/certbot
-    command: "/bin/sh -c 
-    'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'
-    "
-
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
 
 
   certbot:
