--- a/.github/workflows/ci-server.yml
+++ b/.github/workflows/ci-server.yml
@@ -71,7 +71,7 @@ jobs:
     steps:
       
     - name: Build Image
-      working-directory: ./server
+      working-directory: server
       env: 
         DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       run: sudo docker build -t $DOCKER_USERNAME/flow-issue-tracker:server .
