--- a/.github/workflows/cd-server-root.yml
+++ b/.github/workflows/cd-server-root.yml
@@ -1,16 +1,14 @@
-name: API Deployment (root-server)
+name: API CD Pipeline
 
 on:
-  workflow_run:
-    workflows: ["API Integration"] 
-    types:
-      - completed
+  push:
+    branches: [ "aws" ]
 
 jobs: 
 
   build:
 
-    runs-on: [self-hosted, root-server-runner]
+    runs-on: [self-hosted, Reverse-Proxy]
 
     steps:
     - uses: actions/checkout@v4
@@ -18,25 +16,25 @@ jobs:
         sparse-checkout: |
           ./scripts
           ./server-configs
-          ./compose-server-root.yml
         clean: false 
+
 
       
     - name: Delete Old Containers
       run: |
-        sudo docker rm -f $(sudo docker ps -qa) || true
+        sudo docker rm -f api-server || true
+        sudo docker rm -f reverse-proxy || true  
+        sudo docker rm -f certbot || true
         sudo bash -c 'echo y | docker system prune' 
-
 
     - name: Compose Up Services 
       env:
         COMPOSE_FNAME: compose-server-root.yml
-        API_DOMAIN: ${{ vars.API_DOMAIN }}
-        EMAIL: ${{ secrets.EMAIL }} 
+        API_DOMAIN: ${{vars.API_DOMAIN}}
+        EMAIL: ${{secrets.EMAIL}} 
         CONFIG_TYPE: root-server
-      run: | 
-        touch .env.server && touch .env.proxy
-        sudo bash -c 'echo "${{ secrets.SERVER_ENV }}" > .env.server'
-        sudo bash -c 'echo "${{ secrets.NGINX_ENV }}" > .env.proxy'
+      run: |
+        touch .env.server 
+        sudo bash -c 'echo "${{secrets.SERVER_ENV}}" > .env.server'
         chmod +x ./scripts/server/compose.sh
         ./scripts/server/compose.sh
