--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,7 +1,7 @@
 upstream api {
 	server api-server:8080;
-	server ${PROXIED_1};
-	server ${PROXIED_2};
+	# server ${PROXIED_1};
+	# server ${PROXIED_2};
 }
 
 server {    
@@ -24,6 +24,8 @@ server {
 		proxy_set_header Connection 'upgrade';
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
+
+		proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
 
 		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header X-Real-IP $remote_addr;
