--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -25,7 +25,7 @@ server {
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
 
-		proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
+		proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com always;
 
 		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header X-Real-IP $remote_addr;
