--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -25,8 +25,8 @@ server {
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
 
-		proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com always;
-
+		proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
+		proxy_set_header Access-Control-Allow-Credentials true;
 		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -36,6 +36,10 @@ server {
 		proxy_buffering off;
 		proxy_cache off;
 
+	}
+
+	location ~* \.(eot|ttf|woff|woff2)$ {
+    add_header Access-Control-Allow-Origin https://flow-issue-tracker.com always;
 	}
 
 
