--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -39,7 +39,7 @@ server {
 	}
 
 	location ~* \.(eot|ttf|woff|woff2)$ {
-    add_header Access-Control-Allow-Origin https://flow-issue-tracker.com always;
+    	add_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
 	}
 
 
