--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -18,23 +18,27 @@ server {
 	server_name ec2api.flow-issue-tracker.com;
 
 	location / {
-		proxy_pass http://api;
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection 'upgrade';
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
+        proxy_pass  http://api;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+		# proxy_pass http://api;
+		# proxy_http_version 1.1;
+		# proxy_set_header Upgrade $http_upgrade;
+		# proxy_set_header Connection 'upgrade';
+		# proxy_set_header Host $host;
+		# proxy_cache_bypass $http_upgrade;
 
-		proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
-		proxy_set_header Access-Control-Allow-Credentials true;
-		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Cookie $http_cookie;
+		# proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com/;
+		# proxy_set_header Access-Control-Allow-Credentials true;
+		# proxy_set_header X-Forwarded-Proto $scheme;
+		# proxy_set_header X-Real-IP $remote_addr;
+		# proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		# proxy_set_header Cookie $http_cookie;
 
-		chunked_transfer_encoding off;
-		proxy_buffering off;
-		proxy_cache off;
+		# chunked_transfer_encoding off;
+		# proxy_buffering off;
+		# proxy_cache off;
 
 	}
 
