--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -18,16 +18,13 @@ server {
 	server_name ec2api.flow-issue-tracker.com;
 
 	location / {
-        proxy_pass  http://api;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-		# proxy_pass http://api;
-		# proxy_http_version 1.1;
-		# proxy_set_header Upgrade $http_upgrade;
-		# proxy_set_header Connection 'upgrade';
-		# proxy_set_header Host $host;
-		# proxy_cache_bypass $http_upgrade;
+
+		proxy_pass http://api;
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
 
 		# proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com/;
 		# proxy_set_header Access-Control-Allow-Credentials true;
@@ -42,9 +39,9 @@ server {
 
 	}
 
-	location ~* \.(eot|ttf|woff|woff2)$ {
-    	add_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
-	}
+	# location ~* \.(eot|ttf|woff|woff2)$ {
+    # 	add_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
+	# }
 
 
 }
