--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -20,7 +20,7 @@ server {
 	location / {
 
 		proxy_pass http://api;
-		proxy_http_version 1.1
+		proxy_http_version 1.1;
 		proxy_cache_bypass                 $http_upgrade;
 		proxy_set_header Upgrade           $http_upgrade;
 		proxy_set_header Connection        "upgrade";
@@ -30,6 +30,8 @@ server {
 		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header X-Forwarded-Host  $host;
 		proxy_set_header X-Forwarded-Port  $server_port;
+		proxy_set_header Access-Control-Allow-Credentials true;
+		proxy_set_header Cookie $http_cookie;
 
 		# proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com/;
 		# proxy_set_header Access-Control-Allow-Credentials true;
