--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -33,7 +33,7 @@ server {
 		proxy_set_header Access-Control-Allow-Credentials true;
 		proxy_set_header Cookie $http_cookie;
 
-		# proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com/;
+		proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
 		# proxy_set_header Access-Control-Allow-Credentials true;
 		# proxy_set_header X-Forwarded-Proto $scheme;
 		# proxy_set_header X-Real-IP $remote_addr;
