--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -32,8 +32,10 @@ server {
 		proxy_set_header X-Forwarded-Port  $server_port;
 		proxy_set_header Access-Control-Allow-Credentials true;
 		proxy_set_header Cookie $http_cookie;
+		proxy_set_header  Authorization $http_authorization;
+		proxy_pass_header Authorization;
 
-		proxy_set_header Access-Control-Allow-Origin *;
+		# proxy_set_header Access-Control-Allow-Origin *;
 		# proxy_set_header Access-Control-Allow-Credentials true;
 		# proxy_set_header X-Forwarded-Proto $scheme;
 		# proxy_set_header X-Real-IP $remote_addr;
