--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -19,21 +19,45 @@ server {
 
 	location / {
 
-		proxy_pass http://api;
-		proxy_http_version 1.1;
-		proxy_cache_bypass                 $http_upgrade;
-		proxy_set_header Upgrade           $http_upgrade;
-		proxy_set_header Connection        "upgrade";
-		proxy_set_header Host              $host;
-		proxy_set_header X-Real-IP         $remote_addr;
-		proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
-		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Forwarded-Host  $host;
-		proxy_set_header X-Forwarded-Port  $server_port;
-		proxy_set_header Access-Control-Allow-Credentials true;
-		proxy_set_header Cookie $http_cookie;
-		proxy_set_header  Authorization $http_authorization;
-		proxy_pass_header Authorization;
+    set $cors '';
+    # Extend the list of XSS-whilelisted domains by adding more
+    if ($http_origin ~ 'https://flow-issue-tracker.com') {
+        set $cors T;
+    }
+
+    if ($request_method = 'OPTIONS') {
+        set $cors "${cors}O";
+    }
+
+    if ($cors = 'T') {
+        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+
+        #add_header 'Access-Control-Expose-Headers' 'Authorization' always;
+    }
+
+    if ($cors = 'O') {
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        add_header 'Content-Length' 0;
+        return 204;
+    }
+
+    if ($cors = 'TO') {
+        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain charset=UTF-8';
+        add_header 'Content-Length' 0;
+        return 204;
+    }
 
 		# proxy_set_header Access-Control-Allow-Origin *;
 		# proxy_set_header Access-Control-Allow-Credentials true;
