--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -21,7 +21,7 @@ server {
 
     set $cors '';
     # Extend the list of XSS-whilelisted domains by adding more
-    if ($http_origin ~ 'https://flow-issue-tracker.com') {
+    if ($http_origin = 'https://flow-issue-tracker.com') {
         set $cors T;
     }
 
@@ -30,32 +30,32 @@ server {
     }
 
     if ($cors = 'T') {
-        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        proxy_set_header 'Access-Control-Allow-Origin' "$http_origin" always;
+        proxy_set_header 'Access-Control-Allow-Credentials' 'true' always;
+        proxy_set_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        proxy_set_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+        proxy_set_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
 
-        #add_header 'Access-Control-Expose-Headers' 'Authorization' always;
+        #proxy_set_header 'Access-Control-Expose-Headers' 'Authorization' always;
     }
 
     if ($cors = 'O') {
-        add_header 'Access-Control-Max-Age' 1728000;
-        add_header 'Content-Type' 'text/plain charset=UTF-8';
-        add_header 'Content-Length' 0;
+        proxy_set_header 'Access-Control-Max-Age' 1728000;
+        proxy_set_header 'Content-Type' 'text/plain charset=UTF-8';
+        proxy_set_header 'Content-Length' 0;
         return 204;
     }
 
     if ($cors = 'TO') {
-        add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-        add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        proxy_set_header 'Access-Control-Allow-Origin' "$http_origin" always;
+        proxy_set_header 'Access-Control-Allow-Credentials' 'true' always;
+        proxy_set_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+        proxy_set_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+        proxy_set_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
 
-        add_header 'Access-Control-Max-Age' 1728000;
-        add_header 'Content-Type' 'text/plain charset=UTF-8';
-        add_header 'Content-Length' 0;
+        proxy_set_header 'Access-Control-Max-Age' 1728000;
+        proxy_set_header 'Content-Type' 'text/plain charset=UTF-8';
+        proxy_set_header 'Content-Length' 0;
         return 204;
     }
 
@@ -73,7 +73,7 @@ server {
 	}
 
 	# location ~* \.(eot|ttf|woff|woff2)$ {
-    # 	add_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
+    # 	proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
 	# }
 
 
