--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -6,7 +6,7 @@ upstream api {
 
 server {    
 	
-	listen [::]:443 ssl;
+	# listen [::]:443 ssl;
     listen 443 ssl;
 
     ssl_certificate /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/fullchain.pem;
@@ -21,7 +21,7 @@ server {
 
 		proxy_pass http://api;
 		proxy_http_version 1.1;
-
+		proxy_cache_bypass                 $http_upgrade;
 		proxy_set_header Upgrade           $http_upgrade;
 		proxy_set_header Connection        "upgrade";
 		proxy_set_header Host              $host;
@@ -56,7 +56,7 @@ server {
 server {	
 	
 	listen 80;
-	listen [::]:80;
+	# listen [::]:80;
 
     location / {
         return 301 https://$host$request_uri;
