--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,12 +1,10 @@
 upstream api {
-	server api-server:8080;
-	# server ${PROXIED_1};
-	# server ${PROXIED_2};
+    server api-server:8080
 }
 
 server {    
 	
-	# listen [::]:443 ssl;
+	listen [::]:443 ssl;
     listen 443 ssl;
 
     ssl_certificate /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/fullchain.pem;
@@ -18,36 +16,22 @@ server {
 	server_name ec2api.flow-issue-tracker.com;
 
 	location / {
-
 		proxy_pass http://api;
 		proxy_http_version 1.1;
-		proxy_cache_bypass                 $http_upgrade;
-		proxy_set_header Upgrade           $http_upgrade;
-		proxy_set_header Connection        "upgrade";
-		proxy_set_header Host              $host;
-		proxy_set_header X-Real-IP         $remote_addr;
-		proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+
 		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Forwarded-Host  $host;
-		proxy_set_header X-Forwarded-Port  $server_port;
-		proxy_set_header Access-Control-Allow-Credentials true;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Cookie $http_cookie;
 
-		# proxy_set_header Access-Control-Allow-Origin *;
-		# proxy_set_header Access-Control-Allow-Credentials true;
-		# proxy_set_header X-Forwarded-Proto $scheme;
-		# proxy_set_header X-Real-IP $remote_addr;
-		# proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		# proxy_set_header Cookie $http_cookie;
+		chunked_transfer_encoding off;
+		proxy_buffering off;
+		proxy_cache off;
 
-		# chunked_transfer_encoding off;
-		# proxy_buffering off;
-		# proxy_cache off;
-
-	}
-
-	location ~* \.(eot|ttf|woff|woff2)$ {
-    	add_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
 	}
 
 
@@ -56,7 +40,7 @@ server {
 server {	
 	
 	listen 80;
-	# listen [::]:80;
+	listen [::]:80;
 
     location / {
         return 301 https://$host$request_uri;
