--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,7 +1,7 @@
 upstream api {
     server api-server:8080;
-	server ${PROXIED_1}
-	server ${PROXIED_2}
+	server ${PROXIED_1};
+	server ${PROXIED_2};
 }
 
 server {    
