--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -19,6 +19,7 @@ server {
 
 	location / {
 		proxy_pass http://api;
+		proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com always;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
