--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -19,7 +19,6 @@ server {
 
 	location / {
 		proxy_pass http://api;
-		proxy_set_header Access-Control-Allow-Origin https://flow-issue-tracker.com always;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
@@ -34,6 +33,22 @@ server {
 		chunked_transfer_encoding off;
 		proxy_buffering off;
 		proxy_cache off;
+
+		add_header 'Access-Control-Allow-Origin' 'https://flow-issue-tracker.com';
+		add_header 'Access-Control-Allow-Credentials' 'true';
+		add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
+		add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT';
+
+		if ($request_method = 'OPTIONS') {
+		add_header 'Access-Control-Allow-Origin' 'https://flow-issue-tracker.com';
+		add_header 'Access-Control-Allow-Credentials' 'true';
+		add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
+		add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT';
+		add_header 'Access-Control-Max-Age' 1728000;
+		add_header 'Content-Type' 'text/plain charset=UTF-8';
+		add_header 'Content-Length' 0;
+		return 204;
+		}
 
 	}
 
