--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -39,16 +39,16 @@ server {
 		add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
 		add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT';
 
-		if ($request_method = 'OPTIONS') {
-		add_header 'Access-Control-Allow-Origin' 'https://flow-issue-tracker.com';
-		add_header 'Access-Control-Allow-Credentials' 'true';
-		add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
-		add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT';
-		add_header 'Access-Control-Max-Age' 1728000;
-		add_header 'Content-Type' 'text/plain charset=UTF-8';
-		add_header 'Content-Length' 0;
-		return 204;
-		}
+		# if ($request_method = 'OPTIONS') {
+		# add_header 'Access-Control-Allow-Origin' 'https://flow-issue-tracker.com';
+		# add_header 'Access-Control-Allow-Credentials' 'true';
+		# add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
+		# add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT';
+		# add_header 'Access-Control-Max-Age' 1728000;
+		# add_header 'Content-Type' 'text/plain charset=UTF-8';
+		# add_header 'Content-Length' 0;
+		# return 204;
+		# }
 
 	}
 
