--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -18,6 +18,7 @@ server {
 	server_name ec2api.flow-issue-tracker.com;
 
 	location / {
+		resolver 127.0.0.11 ipv6=off;
 		proxy_pass http://api;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
@@ -34,9 +35,6 @@ server {
 		proxy_buffering off;
 		proxy_cache off;
 
-		if ($request_method = 'OPTIONS') {
-			return 204;
-		}
 
 	}
 
