--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -18,7 +18,7 @@ server {
 	server_name ec2api.flow-issue-tracker.com;
 
 	location / {
-		resolver 127.0.0.11 ipv6=off;
+		# resolver 127.0.0.11 ipv6=off;
 		proxy_pass http://api;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
@@ -28,7 +28,7 @@ server {
 
 		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-For $remote_addr;
 		proxy_set_header Cookie $http_cookie;
 
 		chunked_transfer_encoding off;
