--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -19,7 +19,7 @@ server {
 
 	location / {
 		# resolver 127.0.0.11 ipv6=off;
-		proxy_pass http://api;
+		proxy_pass http://api/;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
