--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -19,16 +19,20 @@ server {
 
 	location / {
 		# resolver 127.0.0.11 ipv6=off;
-		proxy_pass http://api/;
+		proxy_pass http://api;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
 
+		# Proxy headers
+		proxy_set_header X-Forwarded-Host  $host;
+		proxy_set_header X-Forwarded-Port  $server_port;
+
 		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $remote_addr;
+		proxy_set_header X-Forwarded-For $remote_addr $proxy_add_x_forwarded_for;
 		proxy_set_header Cookie $http_cookie;
 
 		chunked_transfer_encoding off;
