--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -32,7 +32,7 @@ server {
 
 		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $remote_addr $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; # $remote_addr 
 		proxy_set_header Cookie $http_cookie;
 
 		chunked_transfer_encoding off;
