--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -23,8 +23,16 @@ server {
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
-		proxy_set_header Host $http_host;
+		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
+       if ($request_method = OPTIONS ) {
+            add_header 'Access-Control-Allow-Origin'  '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, HEAD';
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Origin, X-Requested-With, Content-Type, Accept';
+
+            return 200;
+        }
+
 
 		# Proxy headers
 		proxy_set_header X-Forwarded-Host  $host;
@@ -42,6 +50,10 @@ server {
 		proxy_cache off;
 
 
+	}
+
+	location ~* \.(eot|ttf|woff|woff2)$ {
+		add_header Access-Control-Allow-Origin *;
 	}
 
 
