--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,7 +1,6 @@
 upstream api {
-	resolver 127.0.0.11 ipv6=off;
     server api-server:8080;
-	server ${PROXIED_1};
+	server ${PROXIED_1}/;
 	# server ${PROXIED_2};
 }
 
