--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,6 +1,6 @@
 upstream api {
     server api-server:8080;
-	server ${PROXIED_1};
+	# server ${PROXIED_1};
 	# server ${PROXIED_2};
 }
 
@@ -18,7 +18,7 @@ server {
 	server_name ec2api.flow-issue-tracker.com;
 
 	location / {
-		resolver 127.0.0.11 ipv6=off;
+		# resolver 127.0.0.11 ipv6=off;
 		proxy_pass http://api;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
