--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -43,6 +43,14 @@ server {
 	listen 80;
 	listen [::]:80;
 
-  	return 301 https://$host$request_uri;
-    
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+	location /.well-known/acme-challenge/ {
+		root /var/www/certbot;
+	}
+
+	server_name ${SERVER_NAME};
+
 }
