--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -44,6 +44,10 @@ server {
 	listen [::]:80;
 
     location / {
+		add_header Access-Control-Allow-Origin https://flow-issue-tracker.com
+		add_header Access-Control-Allow-Credentials true
+		add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS
+		add_header Access-Control-Allow-Headers Content-Type, Authorization
         return 204 https://$host$request_uri/;
     }
 
