--- a/.github/workflows/cd-server-proxied.yml
+++ b/.github/workflows/cd-server-proxied.yml
@@ -22,6 +22,7 @@ jobs:
       - ${{ matrix.server }}
 
     steps:
+    - run: sudo su
     - uses: actions/checkout@v4
       with:
         sparse-checkout: |
