--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -47,6 +47,7 @@ server {
 		add_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
 		add_header Access-Control-Allow-Credentials true;
 		add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
+		add_header Access-Control-Allow-Headers Content-Type;
         return 204 https://$host$request_uri/;
     }
 
