--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -29,6 +29,8 @@ server {
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header Cookie $http_cookie;
+		proxy_set_header  Authorization $http_authorization;
+		proxy_pass_header Authorization;
 
 		chunked_transfer_encoding off;
 		proxy_buffering off;
