--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,3 +1,9 @@
+map $http_origin $allow_origin {
+	~^https?://(.*\.)flow-issue-tracker.com(:\d+)?$ $http_origin;
+	# NGINX won't set empty string headers, so if no match, header is unset.
+	default "";
+}
+
 upstream api {
     server api-server:8080;
 	server ${PROXIED_1}:80; 
@@ -5,6 +11,7 @@ upstream api {
 }
 
 server {    
+
 	
 	listen [::]:443 ssl;
     listen 443 ssl;
@@ -15,11 +22,18 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
 
+	add_header Access-Control-Allow-Origin $http_origin;
+	add_header Access-Control-Allow-Credentials true;
+	add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
+	add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+
+
 	server_name ec2api.flow-issue-tracker.com;
 
 	location / {
 		proxy_pass http://api;
 		proxy_http_version 1.1;
+		proxy_set_header 
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
 		proxy_set_header Host $host;
