--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -1,6 +1,14 @@
+map $http_origin $allow_origin {
+	~^https?://(.*\.)flow-issue-tracker.com(:\d+)?$ $http_origin;
+	# NGINX won't set empty string headers, so if no match, header is unset.
+	default "";
+}
+
+
 upstream api {
 	server api-server:8080;
 }
+
 
 server {    
 	
@@ -13,11 +21,16 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+	add_header Access-Control-Allow-Origin $http_origin;
+	add_header Access-Control-Allow-Credentials true;
+	add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
+	add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
 
 	server_name ${SERVER_NAME};
 
 	location / {
 		proxy_pass http://api;
+
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
@@ -44,10 +57,10 @@ server {
 	listen [::]:80;
 
     location / {
-		add_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
-		add_header Access-Control-Allow-Credentials true;
-		add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
-		add_header Access-Control-Allow-Headers Content-Type,Access-Control-Allow-Credentials;
+		# add_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
+		# add_header Access-Control-Allow-Credentials true;
+		# add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
+		# add_header Access-Control-Allow-Headers Content-Type,Access-Control-Allow-Credentials;
         return 204 https://$host$request_uri/;
     }
 
