--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -21,7 +21,7 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-	add_header Access-Control-Allow-Origin $http_origin;
+	add_header Access-Control-Allow-Origin $allow_origin;
 	add_header Access-Control-Allow-Credentials true;
 	add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
 	add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
