--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -15,7 +15,6 @@ server {
 	listen [::]:443 ssl;
     listen 443 ssl;
 
-
     ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
@@ -57,10 +56,10 @@ server {
 	listen [::]:80;
 
     location / {
-		# add_header Access-Control-Allow-Origin https://flow-issue-tracker.com;
-		# add_header Access-Control-Allow-Credentials true;
-		# add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
-		# add_header Access-Control-Allow-Headers Content-Type,Access-Control-Allow-Credentials;
+		add_header Access-Control-Allow-Origin $allow_origin;
+		add_header Access-Control-Allow-Credentials true;
+		add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
+		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
         return 204 https://$host$request_uri/;
     }
 
