--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -59,6 +59,11 @@ server {
 	listen 80;
 	listen [::]:80;
 
+	add_header Access-Control-Allow-Origin $allow_origin;
+	add_header Access-Control-Allow-Credentials true;
+	add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
+	add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+
     location / {
         return 301 https://$host$request_uri;
     }
