--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -24,11 +24,11 @@ server {
 	server_name ${SERVER_NAME};
 
 	location / {
-		add_header Access-Control-Allow-Origin $allow_origin;
-		add_header Access-Control-Allow-Credentials true;
-		add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
-		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-		
+		proxy_set_header Access-Control-Allow-Origin $allow_origin;
+		proxy_set_header Access-Control-Allow-Credentials true;
+		proxy_set_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
+		proxy_set_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+
 		proxy_pass http://api;
 
 		proxy_http_version 1.1;
