--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -21,18 +21,14 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-
-
-
-
 	server_name ec2api.flow-issue-tracker.com;
 
 	location / {
-		add_header Access-Control-Allow-Origin $allow_origin;
-		add_header Access-Control-Allow-Credentials true;
-		add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
-		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-		
+		proxy_set_header Access-Control-Allow-Origin $allow_origin;
+		proxy_set_header Access-Control-Allow-Credentials true;
+		proxy_set_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
+		proxy_set_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+
 		proxy_pass http://api;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
@@ -64,10 +60,6 @@ server {
 
 
     location / {
-		add_header Access-Control-Allow-Origin $allow_origin;
-		add_header Access-Control-Allow-Credentials true;
-		add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
-		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
         return 301 https://$host$request_uri;
     }
 
