--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -6,7 +6,7 @@ map $http_origin $allow_origin {
 
 upstream api {
     server api-server:8080;
-	server ${PROXIED_1}; 
+	server ${PROXIED_1}:80; 
 	# server ${PROXIED_2};
 }
 
@@ -30,7 +30,11 @@ server {
 		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
 		proxy_pass_header Access-Control-Allow-Headers;
 
-		proxy_pass $scheme://api;
+		proxy_ssl_server_name on;
+
+
+		proxy_pass http://api;
+
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
