--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,18 +1,15 @@
-map $http_origin $allow_origin {
-	~^https?://(.*\.)flow-issue-tracker.com(:\d+)?$ $http_origin;
-	# NGINX won't set empty string headers, so if no match, header is unset.
-	default "";
+upstream local-servers {
+    server api-server:8080;
 }
 
-upstream api {
-    server api-server:8080;
-	server ${PROXIED_1}:80; 
+
+upstream servers {
+	server ${PROXIED_1}:443; 
 	# server ${PROXIED_2};
 }
 
-server {    
 
-	
+server {    
 	listen [::]:443 ssl;
     listen 443 ssl;
 
@@ -24,16 +21,8 @@ server {
 	server_name ec2api.flow-issue-tracker.com;
 
 	location / {
-		proxy_set_header Access-Control-Allow-Origin $allow_origin;
-		proxy_set_header Access-Control-Allow-Credentials true;
-		proxy_set_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
-		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-		proxy_pass_header Access-Control-Allow-Headers;
-
-		proxy_ssl_server_name on;
-
-
-		proxy_pass http://api;
+		
+		proxy_pass http://local-servers;
 
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
@@ -51,11 +40,46 @@ server {
 		chunked_transfer_encoding off;
 		proxy_buffering off;
 		proxy_cache off;
-
 	}
 
+}
+
+
+server {    
+	listen [::]:443 ssl;
+    listen 443 ssl;
+
+    ssl_certificate /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+	server_name ec2api.flow-issue-tracker.com;
+
+	location / {
+		
+		proxy_pass https://servers;
+
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Cookie $http_cookie;
+		proxy_set_header  Authorization $http_authorization;
+		proxy_pass_header Authorization;
+
+		chunked_transfer_encoding off;
+		proxy_buffering off;
+		proxy_cache off;
+	}
 
 }
+
 
 server {	
 	
