--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -1,10 +1,3 @@
-map $http_origin $allow_origin {
-	~^https?://(.*\.)flow-issue-tracker.com(:\d+)?$ $http_origin;
-	# NGINX won't set empty string headers, so if no match, header is unset.
-	default "";
-}
-
-
 upstream api {
 	server api-server:8080;
 }
@@ -14,7 +7,6 @@ server {
 	
 	listen [::]:443 ssl;
     listen 443 ssl;
-	listen 80;
 
     ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
@@ -25,11 +17,6 @@ server {
 	server_name ${SERVER_NAME};
 
 	location / {
-		proxy_set_header Access-Control-Allow-Origin $allow_origin;
-		proxy_set_header Access-Control-Allow-Credentials true;
-		proxy_set_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
-		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-		proxy_pass_header Access-Control-Allow-Headers;
 
 		proxy_pass http://api;
 
@@ -53,23 +40,19 @@ server {
 
 }
 
-# server {	
+server {	
 	
-# 	listen 80;
-# 	listen [::]:80;
+	listen 80;
+	listen [::]:80;
 
-#     location / {
-# 		add_header Access-Control-Allow-Origin $allow_origin;
-# 		add_header Access-Control-Allow-Credentials true;
-# 		add_header Access-Control-Allow-Methods GET,POST,PUT,OPTIONS;
-# 		add_header Access-Control-Allow-Headers 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
-#         return 204 https://$host$request_uri/;
-#     }
+    location / {
+        return 301 https://$host$request_uri/;
+    }
 
-# 	location /.well-known/acme-challenge/ {
-# 		root /var/www/certbot;
-# 	}
+	location /.well-known/acme-challenge/ {
+		root /var/www/certbot;
+	}
 
-# 	server_name ${SERVER_NAME};
+	server_name ${SERVER_NAME};
 
-# }
+}
