--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,9 +1,9 @@
-upstream local-servers {
-    server api-server:8080;
-}
+# upstream local {
+#     server api-server:8080;
+# }
 
 
-upstream servers {
+upstream non-local {
 	server ${PROXIED_1}:443; 
 	# server ${PROXIED_2};
 }
@@ -22,7 +22,7 @@ server {
 
 	location / {
 		
-		proxy_pass http://local-servers;
+		proxy_pass http://local;
 
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
@@ -58,7 +58,7 @@ server {
 
 	location / {
 		
-		proxy_pass https://servers;
+		proxy_pass https://non-local;
 
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
