--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,7 +1,7 @@
 
 upstream api-server {
-	server ${PROXIED_1}:80;
-	server ${PROXIED_2}:80;
+	server ${PROXIED_1}:443;
+	server ${PROXIED_2}:443;
 }
 
 
@@ -16,8 +16,12 @@ server {
 
 	server_name ec2api.flow-issue-tracker.com;
 
+
 	location / {
 		proxy_pass https://api-server;
 	}
+
+
+	# keepalive_timeout 0;
 
 }
