--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -26,6 +26,7 @@ server {
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
 
+
 		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header X-Real-IP $remote_addr;
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -36,6 +37,9 @@ server {
 		proxy_cache off;
 
 	}
+
+	# keepalive_timeout 0;
+	# proxy_buffering off;
 
 
 }
