--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,27 +1,71 @@
 
-upstream api-server {
-	server ${PROXIED_1}:443;
-	# server ${PROXIED_2}:443;
+# upstream api-server {
+# 	server ${PROXIED_1}:443;
+# 	server ${PROXIED_2}:443;
+# }
+
+upstream api {
+	server api-server:8080;
 }
 
 
 server {    
+	
 	listen [::]:443 ssl;
     listen 443 ssl;
 
-    ssl_certificate /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-	server_name ec2api.flow-issue-tracker.com;
 
+	server_name ${SERVER_NAME};
 
 	location / {
-		proxy_pass https://api-server;
+
+		proxy_pass http://api;
+
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_set_header Host $host;
+		proxy_cache_bypass $http_upgrade;
+
+
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Cookie $http_cookie;
+
+		chunked_transfer_encoding off;
+		proxy_buffering off;
+		proxy_cache off;
+
 	}
 
-
 	# keepalive_timeout 0;
+	# proxy_buffering off;
+
 
 }
+
+# server {    
+# 	listen [::]:443 ssl;
+#     listen 443 ssl;
+
+#     ssl_certificate /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/privkey.pem;
+#     include /etc/letsencrypt/options-ssl-nginx.conf;
+#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+# 	server_name ec2api.flow-issue-tracker.com;
+
+
+# 	location / {
+# 		proxy_pass https://api-server;
+# 	}
+
+# 	# keepalive_timeout 0;
+
+# }
