--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,16 +1,20 @@
 
-# upstream api-server {
-# 	server ${PROXIED_1}:443;
-# 	server ${PROXIED_2}:443;
-# }
+upstream loopback {
+	127.0.0.1:8081;
+	127.0.0.1:8082;
+}
 
-upstream api {
-	server api-server:8080;
+upstream local-server {
+	api-server:8080;
+}
+
+upstream remote-server {
+	server ${PROXIED_1}:443;
+	server ${PROXIED_2}:443;
 }
 
 
 server {    
-	
 	listen [::]:443 ssl;
     listen 443 ssl;
 
@@ -19,19 +23,24 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
-
 	server_name ${SERVER_NAME};
 
 	location / {
+		proxy_pass http://loopback;
+		proxy_next_upstream error timeout http_404 http_403;
+	}
+}
 
-		proxy_pass http://api;
 
+server {
+    listen 8081;
+    location / {
+        proxy_pass http://local-server;
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection 'upgrade';
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
-
 
 		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header X-Real-IP $remote_addr;
@@ -41,13 +50,15 @@ server {
 		chunked_transfer_encoding off;
 		proxy_buffering off;
 		proxy_cache off;
-
-	}
-
-	# keepalive_timeout 0;
-	# proxy_buffering off;
+    }
+}
 
 
+server {
+    listen 8082;
+    location / {
+        proxy_pass https://remote-server;
+    }
 }
 
 # server {    
