--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -29,8 +29,8 @@ server {
 		proxy_pass http://loopback;
 		proxy_next_upstream error timeout http_404 http_403;
 		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection 'upgrade';
+		proxy_set_header Upgrade '';
+		proxy_set_header Connection '';
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
 
@@ -43,6 +43,7 @@ server {
 		proxy_buffering off;
 		proxy_cache off;
 	}
+	keepalive_timeout 3;
 }
 
 
@@ -51,8 +52,8 @@ server {
     location / {
         proxy_pass http://local-server;
 		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection 'upgrade';
+		proxy_set_header Upgrade '';
+		proxy_set_header Connection '';
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
 
@@ -65,6 +66,7 @@ server {
 		proxy_buffering off;
 		proxy_cache off;
     }
+	keepalive_timeout 3;
 }
 
 
@@ -73,8 +75,8 @@ server {
     location / {
         proxy_pass https://remote-server;
 		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection 'upgrade';
+		proxy_set_header Upgrade '';
+		proxy_set_header Connection '';
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
 
@@ -87,6 +89,7 @@ server {
 		proxy_buffering off;
 		proxy_cache off;
     }
+	keepalive_timeout 3;
 }
 
 # server {    
