--- a/server-configs/proxied/post-cert.conf
+++ b/server-configs/proxied/post-cert.conf
@@ -21,8 +21,8 @@ server {
 		proxy_pass http://api;
 
 		proxy_http_version 1.1;
-		proxy_set_header Upgrade $http_upgrade;
-		proxy_set_header Connection 'upgrade';
+		proxy_set_header Upgrade '';
+		proxy_set_header Connection '';
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
 
@@ -38,7 +38,7 @@ server {
 
 	}
 
-	# keepalive_timeout 0;
+	keepalive_timeout 3;
 	# proxy_buffering off;
 
 
