--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -1,20 +1,10 @@
-
-upstream loopback {
-	server 127.0.0.1:8081;
-	server 127.0.0.1:8082;
-}
-
-upstream local-server {
+upstream api {
 	server api-server:8080;
-}
-
-upstream remote-server {
-	server ${PROXIED_1}:443;
-	server ${PROXIED_2}:443;
 }
 
 
 server {    
+	
 	listen [::]:443 ssl;
     listen 443 ssl;
 
@@ -23,16 +13,19 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+
 	server_name ${SERVER_NAME};
 
 	location / {
-		proxy_pass http://loopback;
-		proxy_next_upstream error timeout http_404 http_403;
+
+		proxy_pass http://api;
+
 		proxy_http_version 1.1;
 		proxy_set_header Upgrade '';
 		proxy_set_header Connection '';
 		proxy_set_header Host $host;
 		proxy_cache_bypass $http_upgrade;
+
 
 		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header X-Real-IP $remote_addr;
@@ -40,97 +33,30 @@ server {
 		proxy_set_header Cookie $http_cookie;
 
 		chunked_transfer_encoding off;
+		proxy_buffering off;
 		proxy_cache off;
+
 	}
 
-	keepalive_timeout 3;
-	proxy_buffering off;
+	# keepalive_timeout 3;
+	# proxy_buffering off;
+
+
 }
 
+server {	
+	
+	listen 80;
+	listen [::]:80;
 
-server {
-    listen 8081;
     location / {
-        proxy_pass http://local-server;
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade '';
-		proxy_set_header Connection '';
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-
-		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Cookie $http_cookie;
-
-		chunked_transfer_encoding off;
-		proxy_cache off;
+        return 301 https://$host$request_uri/;
     }
-	proxy_buffering off;
+
+	location /.well-known/acme-challenge/ {
+		root /var/www/certbot;
+	}
+
+	server_name ${SERVER_NAME};
+
 }
-
-
-server {
-    listen 8082;
-    location / {
-        proxy_pass https://remote-server;
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade '';
-		proxy_set_header Connection '';
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-
-		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Cookie $http_cookie;
-
-		chunked_transfer_encoding off;
-		proxy_cache off;
-    }
-	keepalive_timeout 3;
-	proxy_buffering off;
-	gzip on;
-    gzip_disable "MSIE [1-6]\.";
-    gzip_proxied expired no-cache no-store private auth;
-    gzip_comp_level 9;
-    gzip_min_length 20; # Reminder: Default 20
-    gzip_types 
-	text/html
-	text/xml
-	text/plain
-	text/x-component
-	application/json
-	application/xml
-	application/rss+xml
-    proxy_connect_timeout       300;
-    proxy_send_timeout          300;
-    proxy_read_timeout          300;
-    send_timeout                300;
-	proxy_intercept_errors off;
-	proxy_buffers           32 4m;
-	proxy_busy_buffers_size     25m;
-	proxy_buffer_size 512k;
-	client_max_body_size        1024m;
-	client_body_buffer_size     4m;
-}
-
-# server {    
-# 	listen [::]:443 ssl;
-#     listen 443 ssl;
-
-#     ssl_certificate /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/ec2api.flow-issue-tracker.com/privkey.pem;
-#     include /etc/letsencrypt/options-ssl-nginx.conf;
-#     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-# 	server_name ec2api.flow-issue-tracker.com;
-
-
-# 	location / {
-# 		proxy_pass https://api-server;
-# 	}
-
-# 	# keepalive_timeout 0;
-
-# }
