--- a/server-configs/proxied/pre-cert.conf
+++ b/server-configs/proxied/pre-cert.conf
@@ -1,45 +1,18 @@
-upstream api {
-	server api-server:8080;
-}
-
-
-server {    
+server {	
 	
-	listen [::]:443 ssl;
-    listen 443 ssl;
+	listen 80;
+	listen [::]:80;
 
-    ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    location / {
+        return 301 https://$host$request_uri;
+    }
 
-
-	server_name ${SERVER_NAME};
-
-	location / {
-
-		proxy_pass http://api;
-
-		proxy_http_version 1.1;
-		proxy_set_header Upgrade '';
-		proxy_set_header Connection '';
-		proxy_set_header Host $host;
-		proxy_cache_bypass $http_upgrade;
-
-
-		proxy_set_header X-Forwarded-Proto $scheme;
-		proxy_set_header X-Real-IP $remote_addr;
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-		proxy_set_header Cookie $http_cookie;
-
-		chunked_transfer_encoding off;
-		proxy_buffering off;
-		proxy_cache off;
-
+	location /.well-known/acme-challenge/ {
+		root /var/www/certbot;
 	}
 
-	# keepalive_timeout 3;
-	# proxy_buffering off;
-
+	server_name ec2api.flow-issue-tracker.com;
 
 }
+
+
