--- a/.github/workflows/cd-server-proxied.yml
+++ b/.github/workflows/cd-server-proxied.yml
@@ -23,6 +23,7 @@ jobs:
 
     steps:
     - run: |
+        sudo su
         ls
         sudo rm -rf /Issue-Tracker/server-configs/proxied
     - uses: actions/checkout@v4
