--- a/server-configs/root-server/post-cert.conf
+++ b/server-configs/root-server/post-cert.conf
@@ -8,8 +8,8 @@ server {
 	listen [::]:443 ssl;
     listen 443 ssl;
 
-    ssl_certificate /etc/letsencrypt/live/${SERVER_NAME}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${SERVER_NAME}/privkey.pem;
+    ssl_certificate /etc/ssl/certs/flow-cert.pem
+    ssl_certificate_key etc/ssl/private/flow-key.pem
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -56,6 +56,7 @@ server {
 	location /.well-known/acme-challenge/ {
 		allow all;
 	}
+	
 	root /var/www/certbot;
 	server_name ec2api.flow-issue-tracker.com;
 
