--- a/compose-server-root.yml
+++ b/compose-server-root.yml
@@ -16,19 +16,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./server-configs/root-server/pre-cert.conf:/etc/nginx/conf.d/config.conf
-      - ./server-configs/certbot/conf:/etc/letsencrypt
-      - ./server-configs/certbot/www:/var/www/certbot
+      - ./server-configs/root-server/post-cert.conf:/etc/nginx/conf.d/config.conf
+      - ./etc/ssl/certs/flow-cert.pem:/etc/ssl/certs/flow-certs.pem
+      - ./etc/ssl/private/flow-key.pem:/etc/ssl/private/flow-key.pem
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     env_file: .env.proxy
-
-
-  certbot:
-    image: certbot/certbot
-    container_name: certbot
-    restart: unless-stopped
-    volumes:
-      - ./server-configs/certbot/conf:/etc/letsencrypt
-      - ./server-configs/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     
